--- a/Deploy.ipynb
+++ b/Deploy.ipynb
@@ -2,30 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enabling notebook extension jupyter-js-widgets/extension...\n",
-      "      - Validating: \u001b[32mOK\u001b[0m\n",
-      "Enabling: voila\n",
-      "- Writing config: /Users/narrik/miniconda3/envs/fourk/etc/jupyter\n",
-      "    - Validating...\n",
-      "      voila 0.3.5 \u001b[32mOK\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!jupyter nbextension enable --py widgetsnbextension --sys-prefix\n",
-    "!jupyter serverextension enable voila --sys-prefix"
+    "# !jupyter nbextension enable --py widgetsnbextension --sys-prefix\n",
+    "# !jupyter serverextension enable voila --sys-prefix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,24 +104,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f2ea4febe0b14e839530a15d580c02c7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(HTML(value='<h3>Zadaj tému na ktorú ti AIrik Kaliňák™ napíše status, ak nezadáš …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "page = widgets.HBox([vbox])\n",
     "display(page)"
