--- a/Deploy.ipynb
+++ b/Deploy.ipynb
@@ -2,17 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !jupyter nbextension enable --py widgetsnbextension --sys-prefix\n",
-    "# !jupyter serverextension enable voila --sys-prefix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,18 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = GPT2LMHeadModel.from_pretrained('saved_model/')\n",
-    "tokenizer = GPT2Tokenizer.from_pretrained('saved_model/')\n",
+    "model = GPT2LMHeadModel.from_pretrained('saved_model_fico/')\n",
+    "tokenizer = GPT2Tokenizer.from_pretrained('saved_model_fico/')\n",
     "translator = Translator()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,22 +57,23 @@
     "                                  pad_token_id=tokenizer.eos_token_id\n",
     "                                  )\n",
     "\n",
-    "  return str(translator.translate(tokenizer.decode(sample_output[0], skip_special_tokens=True), dest=\"sk\").text)"
+    "  # return str(translator.translate(tokenizer.decode(sample_output[0], skip_special_tokens=True), dest=\"sk\").text)\n",
+    "  return str(tokenizer.decode(sample_output[0], skip_special_tokens=True))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "prompt = widgets.Text(placeholder='Náhodná téma',layout=widgets.Layout(width='200px', height='50px'))\n",
-    "text_0 = widgets.HTML(value=\"<h3>Zadaj tému na ktorú ti AIrik Kaliňák™ napíše status, ak nezadáš nič, téma bude náhodná.</h3>\")\n",
+    "text_0 = widgets.HTML(value=\"<h3>Zadaj tému na ktorú ti Robot Fico™ napíše status, ak nezadáš nič, téma bude náhodná.</h3>\")\n",
     "\n",
     "\n",
     "button_send = widgets.Button(\n",
     "                description='Napíš status!',\n",
-    "                tooltip='Klikni ma',\n",
+    "                tooltip='Klikni na mňa',\n",
     "                style={'description_width': 'initial'},\n",
     "                layout=widgets.Layout(width='200px', height='50px')\n",
     "            )\n",
@@ -93,7 +84,7 @@
     "    with output:\n",
     "        clear_output()\n",
     "        response = generate(prompt.value)\n",
-    "        display(widgets.Image(value=open(\"StatusAI.jpg\", \"rb\").read(),format='jpg',width='500'))\n",
+    "        display(widgets.Image(value=open(\"StatusAI_fico.jpg\", \"rb\").read(),format='jpg',width='500'))\n",
     "        display(widgets.HTML(value=response))\n",
     "        \n",
     "\n",
@@ -104,18 +95,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# prompt = widgets.Text(placeholder='Náhodná téma',layout=widgets.Layout(width='200px', height='50px'))\n",
+    "# text_0 = widgets.HTML(value=\"<h3>Zadaj tému na ktorú ti AIrik Kaliňák™ napíše status, ak nezadáš nič, téma bude náhodná.</h3>\")\n",
+    "\n",
+    "\n",
+    "# button_send = widgets.Button(\n",
+    "#                 description='Napíš status!',\n",
+    "#                 tooltip='Klikni na mňa',\n",
+    "#                 style={'description_width': 'initial'},\n",
+    "#                 layout=widgets.Layout(width='200px', height='50px')\n",
+    "#             )\n",
+    "\n",
+    "# output = widgets.Output()\n",
+    "\n",
+    "# def on_button_clicked(event):\n",
+    "#     with output:\n",
+    "#         clear_output()\n",
+    "#         response = generate(prompt.value)\n",
+    "#         display(widgets.Image(value=open(\"StatusAI_erik.jpg\", \"rb\").read(),format='jpg',width='500'))\n",
+    "#         display(widgets.HTML(value=response))\n",
+    "        \n",
+    "\n",
+    "# button_send.on_click(on_button_clicked)\n",
+    "\n",
+    "# vbox = widgets.VBox([text_0, prompt, button_send, output])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab289d4eea674ed4a7078496e2c54dcc",
+       "model_id": "28ac115f8ed446c0b87b108f037bca26",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(VBox(children=(HTML(value='<h3>Zadaj tému na ktorú ti AIrik Kaliňák™ napíše status, ak nezadáš …"
+       "HBox(children=(VBox(children=(HTML(value='<h3>Zadaj tému na ktorú ti Robot Fico™ napíše status, ak nezadáš nič…"
       ]
      },
      "metadata": {},
@@ -147,7 +170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4
  },
