changed output language back to slovak

--- a/Deploy.ipynb
+++ b/Deploy.ipynb
@@ -2,7 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!jupyter nbextension enable --py widgetsnbextension --sys-prefix\n",
+    "#!jupyter serverextension enable voila --sys-prefix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,13 +67,12 @@
     "                                  pad_token_id=tokenizer.eos_token_id\n",
     "                                  )\n",
     "\n",
-    "  # return str(translator.translate(tokenizer.decode(sample_output[0], skip_special_tokens=True), dest=\"sk\").text)\n",
-    "  return str(tokenizer.decode(sample_output[0], skip_special_tokens=True))"
+    "  return str(translator.translate(tokenizer.decode(sample_output[0], skip_special_tokens=True), dest=\"sk\").text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,13 +136,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28ac115f8ed446c0b87b108f037bca26",
+       "model_id": "fc06a63fa2d94bc6a94f38dd9a46ef7c",
        "version_major": 2,
        "version_minor": 0
       },
